--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,6 +9,6 @@ layout: page
 {{ content }}
 
 <nav class="buttons">
-	<a href={{ site.current-work.link | escape }} class="button" target="_blank">{{ site.current-work.title }}</a>
-	<a href={{ site.contact-me.link | escape }} class="button">{{ site.contact-me.title }}</a>
+	<a href={{ site.button-1.link | escape }} class="button" target="_blank">{{ site.button-1.title }}</a>
+	<a href={{ site.button-2.link | escape }} class="button">{{ site.button-2.title }}</a>
 </nav>
