Changed to use uploads asset

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,5 +10,5 @@ layout: default
 </div>
 
 <a href="{{ "/" | relative_url }}">
-	<figure class="hero" style="background: url('/assets/images/hero.jpg');"></figure>
+	<figure class="hero" style="background: url('/uploads/hero.jpg');"></figure>
 </a>
