--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,7 @@ layout: default
 <div class="info position-relative">
 	<div class="content pin-middle-center">
 		<h1 class="logo">{{ page.title | escape }}</h1>
+		<h6 class="subheading">{{ page.subtitle | escape }}</h6>
 		{{ content }}
 	</div>
 </div>
