--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -11,11 +11,6 @@
         m.parentNode.insertBefore(a, m)
     })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    {% if jekyll.environment == 'production' %}
-    ga('create', '{{ site.google_analytics.prod_key }}', 'auto');
-    {% else %}
-    ga('create', '{{ site.google_analytics.staging_key }}', 'auto');
-    {% endif %}
-
+    ga('create', '{{ site.google_analytics.tracking_id }}', 'auto');
     ga('send', 'pageview');
 </script>
