--- a/styles/main.css
+++ b/styles/main.css
@@ -396,42 +396,42 @@ h6 {
 /* fonts */
 @font-face {
     font-family: 'Gotham Light';
-    src: url('../fonts/gothamlight.woff') format('woff'),
-    	 url('../fonts/gothamlight.woff2') format('woff2');
+    src: url('fonts/gothamlight.woff') format('woff'),
+    	 url('fonts/gothamlight.woff2') format('woff2');
 }
 
 @font-face {
     font-family: 'Gotham Book';
-    src: url('../fonts/gothambook.woff') format('woff'),
-    	 url('../fonts/gothambook.woff2') format('woff2');
+    src: url('fonts/gothambook.woff') format('woff'),
+    	 url('fonts/gothambook.woff2') format('woff2');
 }
 
 @font-face {
     font-family: 'Gotham Medium';
-    src: url('../fonts/gothammedium.woff') format('woff'),
-    	 url('../fonts/gothammedium.woff2') format('woff2');
+    src: url('fonts/gothammedium.woff') format('woff'),
+    	 url('fonts/gothammedium.woff2') format('woff2');
 }
 
 @font-face {
     font-family: 'Gotham Bold';
-    src: url('../fonts/gothambold.woff') format('woff'),
-    	 url('../fonts/gothambold.woff2') format('woff2');
+    src: url('fonts/gothambold.woff') format('woff'),
+    	 url('fonts/gothambold.woff2') format('woff2');
 }
 
 @font-face {
 	font-family: 'Leitura';
-	src: url('../fonts/leitura.woff') format('woff'),
-		 url('../fonts/leitura.woff2') format('woff2');
+	src: url('fonts/leitura.woff') format('woff'),
+		 url('fonts/leitura.woff2') format('woff2');
 }
 
 @font-face {
 	font-family: 'Icons';
-	src: url('../fonts/icons.woff') format('woff'),
-		 url('../fonts/icons.woff2') format('woff2');
+	src: url('fonts/icons.woff') format('woff'),
+		 url('fonts/icons.woff2') format('woff2');
 }
 
 @font-face {
 	font-family: 'FontAwesome';
-	src: url('../fonts/fontawesome-webfont.woff') format('woff'),
-		 url('../fonts/fontawesome-webfont.woff2') format('woff2');
+	src: url('fonts/fontawesome-webfont.woff') format('woff'),
+		 url('fonts/fontawesome-webfont.woff2') format('woff2');
 }
