--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,6 @@
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
 	{% if jekyll.environment == 'production' and site.google_analytics.tracking_id %}
-	{% include google-analytics.html %}
+		<script> {% include analytics.js %} </script>
 	{% endif %}
 </head>
