--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,11 @@
 {% include head.html %}
 
 <body>
+	{% include header.html %}
 	<main class="wrapper" role="main">
 		{{ content }}
 	</main>
+	{% include footer.html %}
 </body>
 
 </html>
