--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,10 +6,22 @@
 
 	<title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
 
-	<link rel="icon" type="image/png" href="{{ "assets/favicon.png" | relative_url }}"> 
-	<link rel="stylesheet" href="{{ "/styles/main.css" | relative_url }}">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
+
+	<link rel="icon" type="image/png" href="{{ "assets/favicon.png" | relative_url }}"> 
+	<link rel="stylesheet" href="{{ "/styles/main.css" | relative_url }}">
+
+	<meta property="og:url" content="{{ page.url | absolute_url }}">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="{{ page.title }}">
+	<meta property="og:description" content="{{ page.summary }}">
+	<meta property="og:site_name" content="{{ site.title }}">
+
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:url" content="{{ page.url | absolute_url }}">
+	<meta name="twitter:title" content="{{ page.title }}">
+	<meta name="twitter:description" content="{{ page.summary }}">
 
 	{% if jekyll.environment == 'production' and site.google_analytics.tracking_id %}
 		<script> {% include analytics.js %} </script>
