--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,51 +2,4 @@
 ---
 
 @charset 'utf-8';
-
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:600,600i,700,700i');
-
-@import 'base';
-@import 'mixins';
-@import 'components';
-
-@font-face {
-    font-family: 'Gotham Light';
-    src: url('fonts/gothamlight.woff') format('woff'),
-    	 url('fonts/gothamlight.woff2') format('woff2');
-}
-
-@font-face {
-    font-family: 'Gotham Book';
-    src: url('fonts/gothambook.woff') format('woff'),
-    	 url('fonts/gothambook.woff2') format('woff2');
-}
-
-@font-face {
-    font-family: 'Gotham Medium';
-    src: url('fonts/gothammedium.woff') format('woff'),
-    	 url('fonts/gothammedium.woff2') format('woff2');
-}
-
-@font-face {
-    font-family: 'Gotham Bold';
-    src: url('fonts/gothambold.woff') format('woff'),
-    	 url('fonts/gothambold.woff2') format('woff2');
-}
-
-@font-face {
-	font-family: 'Leitura';
-	src: url('fonts/leitura.woff') format('woff'),
-		 url('fonts/leitura.woff2') format('woff2');
-}
-
-@font-face {
-	font-family: 'Icons';
-	src: url('fonts/icons.woff') format('woff'),
-		 url('fonts/icons.woff2') format('woff2');
-}
-
-@font-face {
-	font-family: 'FontAwesome';
-	src: url('fonts/fontawesome-webfont.woff') format('woff'),
-		 url('fonts/fontawesome-webfont.woff2') format('woff2');
-}
+@import 'fonts', 'base', 'mixins', 'components';
