--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-{% include head.html %}
+  {% include head.html %}
 
-<body>
-	{% include header.html %}
-	<main class="wrapper" role="main">
-		{{ content }}
+  <body>
+    <div id="shadow"></div>
+    
+    {% include header.html %}
+    {% include sidebar.html %}
+    
+    <main class="content-wrapper">
+      {{ content }}
 	</main>
-	{% include footer.html %}
-</body>
 
+	{% include footer.html %}
+	
+	<script src="{{ site.baseurl }}/scripts/all.js"></script>
+  </body>
 </html>
