--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,4 +2,11 @@
 ---
 
 @charset 'utf-8';
-@import 'fonts', 'base', 'mixins', 'components';
+@import
+  "normalize",
+  "variables",
+  "base",
+  "layout",
+  "media-queries",
+  "syntax-highlighting"
+;
