Final updates to the style

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,4 @@
-<a href="{{ " / " | relative_url }}">
+<a href={{ "/" | relative_url }}>
   <aside class="sidebar" role="note" style="background-image: url({{ page.hero_image | relative_url }})">
 
     <div class="cover">
