--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,3 +1,30 @@
+$color-white: #fff;
+$color-black: #000;
+$color-off-white: #ddd;
+$color-light-grey: #b9b9b9;
+$color-dark-grey: #454545;
+$color-dark-grey-link: #333;
+$color-blue: #007496;
+
+$text-font: 'Gotham Medium', sans-serif;
+$social-font: 'FontAwesome';
+
+$normal-font-weight: 600;
+$bold-font-weight: 700;
+
+$font-size-h1: 38px;
+$font-size-h2: 33px;
+$font-size-h3: 30px;
+$font-size-h4: 27px;
+$font-size-h5: 24px;
+$font-size-h6: 20px;
+$font-size-body: 16px;
+$font-size-button: 12px;
+$font-size-social: 15px;
+
+$body-max-width: 1680px;
+$button-height: 40px;
+
 $lg-break-point: 1200px;
 $break-point: 960px;
 $md-break-point: 640px;
