--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -16,8 +16,8 @@ body {
   font: normal 17px/1.5 'PT Serif', "Helvetica Neue", "Helvetica", Arial, sans-serif;
   width: 100%;
   height: 100%;
-  background: #fdfdfd;
-  color: #222;
+  background: $color-white;
+  color: $color-dark-grey;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
 }
@@ -29,7 +29,7 @@ article p {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: bold;
-  a:link, a:hover, a:focus, a:visited { color: #333; text-decoration: none; }
+  a:link, a:hover, a:focus, a:visited { color: $color-dark-grey-link; text-decoration: none; }
   a:hover { text-decoration: underline; }
 }
 
@@ -47,7 +47,7 @@ h6 { font-size: .6em; }
   font-family: 'Roboto Condensed', sans-serif;
   margin: .67em 0;
   a:link, a:hover, a:focus, a:visited {
-    color: #fff;
+    color: $color-white;
   }
 }
 
@@ -83,9 +83,8 @@ textarea {
 * ========================================================================== */
 pre {
   line-height: 1.5;
-  border: 1px solid #ddd;
   padding: 1em;
-  background: #F9F8F6;
+  background: $color-off-white;
   margin: 2em 0;
   code {
     background-color: transparent;
@@ -117,21 +116,21 @@ table {
 }
 
 table tr:nth-child(even) {
-  background: #f9f9f9;
+  background: $color-off-white;
 }
 table th {
-  background: #f5f5f5;
+  background: $color-off-white;
   font-family: sans-serif;
 }
 th,
 td {
   text-align: left;
   padding: .313em .625em;
-  border: 1px solid #efefef;
+  border: 1px solid $color-off-white;
 }
 table caption {
   padding: .3em;
-  border: 1px solid #ddd;
+  border: 1px solid $color-off-white;
 }
 
 
@@ -139,7 +138,7 @@ table caption {
 * Blockquote
 * ========================================================================== */
 blockquote {
-  border: 1px solid #ddd;
+  border: 1px solid $color-off-white;
   padding: 1em 1em 1em 2em;
   position: relative;
   margin-left: 0;
@@ -166,7 +165,7 @@ button, input[type="submit"] {
 }
 
 article a.btn {
-  color: #fff;
+  color: $color-white;
   text-decoration: none;
 }
 
@@ -174,7 +173,7 @@ article a.btn {
   font-weight: normal;
   text-align: center;
   padding: .5em;
-  color: #fff;
+  color: $color-white;
   display: inline-block;
 }
 
@@ -182,17 +181,17 @@ article a.btn {
   text-align: center;
   height: 3em;
   padding: .5em 0;
-  color: #333;
+  color: $color-dark-grey-link;
   a:link, a:focus {
-    color: #333;
+    color: $color-dark-grey-link;
   }
   font-size: 1.5em;
   [class^="icon"]:before {
-    background: #fff;
+    background: $color-white;
     width: 40px;
     height: 40px;
     padding: 5px;
-    border: 1px solid #ddd;
+    border: 1px solid $color-off-white;
     transition: -webkit-transform .3s ease-in-out 0s;
     transition: transform .3s ease-in-out 0s;
   }
@@ -249,7 +248,7 @@ article a.btn {
   left: 50%;
   margin: auto;
   z-index: 2000;
-  box-shadow: 0 0 10px #000;
+  box-shadow: 0 0 10px $color-dark-grey;
 }
 
 a img {
