--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -2,7 +2,7 @@
 * Links
 * ========================================================================== */
 a {
-  color: #333;
+  color: $color-dark-grey-link;
   &:hover,
   &:focus,
   &:active { text-decoration: none; }
@@ -29,7 +29,7 @@ a {
   line-height: 50px;
   left: 0;
   top: 0;
-  color: #000;
+  color: $color-dark-grey;
   font-size: 18px;
 }
 
@@ -73,12 +73,13 @@ a {
 * Header
 * ========================================================================== */
 .main-header {
-  background-color: #fdfdfd;
+  margin: 3em;
+  background-color: $color-white;
   position: fixed;
   z-index: 100;
   width: 100%;
   top: 0;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid $color-off-white;
 }
 
 
@@ -101,6 +102,7 @@ a {
   justify-content: space-around;
   font-weight: 400;
   font-family: "Roboto Condensed", sans-serif;
+  font-size: 24px;
   padding: 0 1rem;
   text-transform: uppercase;
   a {
@@ -109,12 +111,13 @@ a {
     order: 1;
     line-height: 50px;
     margin: auto;
-    color: #333;
+    color: $color-dark-grey-link;
+    font-size: 24px;
     text-decoration: none;
     &:hover,
     &:focus,
     &:active {
-      color: #766257;
+      color: $color-blue;
     }
   }
 }
@@ -128,7 +131,7 @@ a {
   .blog-logo {
     width: 100%;
     line-height: 50px;
-    font-size: 18px;
+    font-size: 24px;
     text-decoration: none;
     -webkit-order: 0;
     -ms-flex-order: 0;
@@ -149,7 +152,7 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  background-color: #000;
+  background-color: $color-dark-grey;
   display: none;
 }
 
@@ -161,8 +164,8 @@ a {
 }
 
 .cover-text {
-  color: #fff;
-  text-shadow: 2px 0 5px #333;
+  color: $color-white;
+  text-shadow: 2px 0 5px $color-dark-grey-link;
   position: absolute;
   bottom: 20%;
   width: 80%;
@@ -233,23 +236,23 @@ article {
     display: block;
     margin: 1em auto;
     padding: .2em;
-    background-color: #fff;
+    background-color: $color-white;
   }
 }
 
 .post-meta {
   padding-bottom: .5em;
   text-transform: uppercase;
-  color: #b9b9b9;
+  color: $color-light-grey;
   font-size: 70%;
   font-weight: bold;
   font-family: 'Roboto Condensed', sans-serif;
   a, a:hover, a:focus, a:visited {
-    color: #333;
+    color: $color-dark-grey-link;
   }
 
   .meta-black {
-    color: #333;
+    color: $color-dark-grey-link;
   }
 
 }
@@ -268,7 +271,7 @@ article {
 .year li {
   padding: 5px;
   padding: 8px 10px;
-  border-bottom: 1px dotted #eae4da
+  border-bottom: 1px dotted $color-light-grey;
 }
 
 .year a {
@@ -282,7 +285,7 @@ article {
 .date {
   text-align: right;
   float: right;
-  color: #d4d4d4;
+  color: $color-light-grey;
   display: none;
 }
 
@@ -292,29 +295,32 @@ article {
 * Footer
 * ========================================================================== */
 .main-footer {
-  height: 4em;
-  margin: 5em auto 0;
+  height: 6em;
+  margin: 6em;
   font-size: 70%;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid $color-off-white;
   text-transform: uppercase;
   text-align: center;
   line-height: 1.5em;
+}
 
-  .social {
-    font-family: 'FontAwesome';
-    font-size: 24px;
-    margin: 10px;
-    color: #333;
+.social {
+  font-family: 'FontAwesome';
+  font-size: 24px;
+  margin: .5em;
+  color: $color-dark-grey;
+  text-decoration: none;
+  cursor: pointer;
+  transition: color .3s ease-in;
+  -moz-transition: color .3s ease-in;
+  -o-transition: color .3s ease-in;
+  -webkit-transition: color .3s ease-in;
+
+  a {
     text-decoration: none;
-    cursor: pointer;
-    transition: color .3s ease-in;
-    -moz-transition: color .3s ease-in;
-    -o-transition: color .3s ease-in;
-    -webkit-transition: color .3s ease-in;
-  }
-
-  .social a:hover {
-    color: #007496;
+    &:hover {
+      color: $color-blue;
+    }
   }
 }
 
@@ -332,20 +338,20 @@ article {
   text-decoration: none;
   outline: none;
   text-align: center;
-  border: 1px solid #ddd;
+  border: 1px solid $color-off-white;
   transition: border-color .5s ease-in 0s;
-  &:hover { border-color: #0D243B; }
+  &:hover { border-color: $color-blue; }
 
   &__prev, &__next {
     font-size: .8em;
-    color: #333;
+    color: $color-dark-grey-link;
     margin: 10px 0;
   }
   
   &__title {
     font-size: 1em;
     font-weight: bold;
-    color: #333;
+    color: $color-dark-grey-link;
     margin-top: 10px;
     display: block;
   }
