--- a/styles/_normalize.scss
+++ b/styles/_normalize.scss
@@ -69,7 +69,7 @@ h1 {
 
 mark {
     background: #ff0;
-    color: #000;
+    color: $color-dark-grey;
 }
 
 small {
@@ -187,7 +187,7 @@ input[type="search"]::-webkit-search-decoration {
 }
 
 fieldset {
-    border: 1px solid #c0c0c0;
+    border: 1px solid $color-light-grey;
     margin: 0 2px;
     padding: .35em .625em .75em;
 }
