--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,18 +3,14 @@ layout: default
 ---
 
 <article class="page">
-  {{ content }}
+	{{ content }}
 
-  	{% if page.buttons %}
-		<nav class="buttons">
-			{% for button in page.buttons %}
-				{% if button.link contains "http" %}
-					{% assign button_target = "_blank" %}
-				{% else %}
-					{% assign button_target = "_self" %}
-				{% endif %}
-				<a href={{ button.link | escape }} class="button" target={{ button_target }}>{{ button.title }}</a>
-			{% endfor %}
-		</nav>
+	{% if page.action_button.link %}
+		{% if page.action_button.link contains "http" %}
+			{% assign button_target = "_blank" %}
+		{% else %}
+			{% assign button_target = "_self" %}
+		{% endif %}
+		<a href="{{ page.action_button.link | escape }}" class="button" target={{ button_target }}>{{ page.action_button.title }}</a>
 	{% endif %}
 </article>
