--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,8 @@
-<header class="main-header content-wrapper">
+<header class="content-wrapper">
 
-  <input type="checkbox" id="menu-checkbox" />
+  <a href={{ "/" | relative_url }}>
+    <img class="profile-image" src={{ "uploads/profile-image.jpg" | relative_url }} alt="Profile Image">
+  </a>
 
-  <nav class="center-wrapper nav-main">
-
-    <a class="blog-logo" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
-    {% for my_page in site.pages %}
-    {% if my_page.is_header_page %}
-        <a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
-    {% endif %}
-    {% endfor %}
-
-    <label for="menu-checkbox" class="toggle-button" data-open="☰" data-close="☰" onclick></label>
-  </nav>
-
+  <h1> {{ page.title }} </h1>
 </header>
