--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -1,257 +1,135 @@
-/*
-* Base Styles
-* ========================================================================== */
-.center-wrapper {
-  max-width: $break-point;
-  margin: 0 auto;
+ol,
+ul {
+  list-style: disc;
 }
 
-.hidden {
-  display: none;
+blockquote,
+q {
+  quotes: none;
+  &:before,
+  &:after {
+    content: '';
+    content: none;
+  }
 }
 
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 
+*,
+* :before,
+* :after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: $font-size-body;
+  background-color: $color-background;
+  color: $color-text;
+}
+
+@media only screen and (max-width: 600px) {
+  html {
+    font-size: $font-size-body;
+  }
+}
+
+main {
+  max-width: 800px;
+}
 
 body {
-  font: normal 17px/1.5 'PT Serif', "Helvetica Neue", "Helvetica", Arial, sans-serif;
-  width: 100%;
-  height: 100%;
-  background: $color-white;
-  color: $color-dark-grey;
-  font-weight: 400;
-  -webkit-font-smoothing: antialiased;
-}
-
-article p {
-  margin-bottom: 15px;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-weight: bold;
-  a:link, a:hover, a:focus, a:visited { color: $color-dark-grey-link; text-decoration: none; }
-  a:hover { text-decoration: underline; }
-}
-
-h1 { font-size: 1.5em; }
-h2 { font-size: 1.4em; }
-h3 { font-size: 1.2em; }
-h4 { font-size: 1em; }
-h5 { font-size: .8em; }
-h6 { font-size: .6em; }
-
-.heading {
-  font-size: 2.3em;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-family: 'Roboto Condensed', sans-serif;
-  margin: .67em 0;
-  a:link, a:hover, a:focus, a:visited {
-    color: $color-white;
-  }
-}
-
-input[type="submit"],
-button {
-  border: 0;
-  outline: 0;
-}
-
-textarea {
-  resize: vertical;
-}
-
-/* hide text within the placeholder */
-:focus::-webkit-input-placeholder {
-  color: transparent;
-}
-:focus::-moz-placeholder {
-  color: transparent;
-}
-:focus:-ms-input-placeholder {
-  color: transparent;
-}
-
-/* box-sizing model */
-*,
-*:before,
-*:after { box-sizing: border-box; }
-
-
-/*
-* Code Style
-* ========================================================================== */
-pre {
+  font-family: $text-font;
+  font-weight: $normal-font-weight;
   line-height: 1.5;
-  padding: 1em;
-  background: $color-off-white;
-  margin: 2em 0;
-  code {
-    background-color: transparent;
-    overflow: auto;
-  }
+  -webkit-font-smoothing: antialiased;
+  -font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
-code,
-pre {
-  font-family: "Menlo", 'Andale Mono', 'Consolas', monospace;
-  font-size: .9em;
-  line-height: 1.3;
-  -webkit-font-smoothing: auto;
-}
-
-
-
-/*
-* Table
-* ========================================================================== */
-table {
-  width: 100%;
-  max-width: 100%;
-  border-collapse: collapse;
-  margin: 2% 0;
-  overflow-x: auto;
-  display: block;
-  margin: 0 auto;
-}
-
-table tr:nth-child(even) {
-  background: $color-off-white;
-}
-table th {
-  background: $color-off-white;
-  font-family: sans-serif;
-}
-th,
-td {
-  text-align: left;
-  padding: .313em .625em;
-  border: 1px solid $color-off-white;
-}
-table caption {
-  padding: .3em;
-  border: 1px solid $color-off-white;
-}
-
-
-/*
-* Blockquote
-* ========================================================================== */
-blockquote {
-  border: 1px solid $color-off-white;
-  padding: 1em 1em 1em 2em;
-  position: relative;
-  margin-left: 0;
-  p {
-    margin-top: 0;
-    margin-bottom: 1em;
-  }
-  &:before {
-    content: '"';
-    position: absolute;
-    left: .3em;
-    top:0;
-    font-size: 2em;
-    line-height: 2em;
-  }
-}
-
-
-/*
-* Buttons
-* ========================================================================== */
-button, input[type="submit"] {
-  border: none;
-}
-
-article a.btn {
-  color: $color-white;
+a {
+  color: $color-primary;
   text-decoration: none;
+
+  &:hover {
+    color: $color-primary-alpha;
+  }
 }
 
-.btn {
-  font-weight: normal;
+strong, b {
+  font-weight: $bold-font-weight;
+}
+
+header {
   text-align: center;
-  padding: .5em;
-  color: $color-white;
-  display: inline-block;
+  text-transform: uppercase;
+  color: $color-primary;
 }
 
-.share-buttons {
-  text-align: center;
-  height: 3em;
-  padding: .5em 0;
-  color: $color-dark-grey-link;
-  a:link, a:focus {
-    color: $color-dark-grey-link;
-  }
-  font-size: 1.5em;
-  [class^="icon"]:before {
-    background: $color-white;
-    width: 40px;
-    height: 40px;
-    padding: 5px;
-    border: 1px solid $color-off-white;
-    transition: -webkit-transform .3s ease-in-out 0s;
-    transition: transform .3s ease-in-out 0s;
-  }
-  [class^="icon"]:hover:before {
-    -webkit-transform: translateY(10px);
-    transform: translateY(10px);
-  }
+footer {
+  align-content: center;
 }
 
-
-
-/*
-* JavaScript Classes
-* ========================================================================== */
-#shadow {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, .7);
-  display: none;
-  z-index: 1000;
+nav {
+  margin: 20px 0px;
 }
 
-#switcher {
-  width: 10%;
-  cursor: crosshair;
-  height: 100vh;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 400;
-  display: none;
+p, ul {
+  margin: 8px 0px 0px;
 }
 
-.transition-divs {
-  transition: all .5s ease-in-out 0s;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $header-font;
+  font-weight: $header-font-weight;
 }
 
-.aside-left {
-  left: -33% !important;
+h1 {
+  font-size: $font-size-h1;
+  margin: 32px 0px 0px;
 }
 
-.centering {
-  margin-left: calc(50% - (740px / 2)) !important;
-  transition: all .5s ease-in-out 0s;
+h2 {
+  font-size: $font-size-h2;
+  margin: 24px 0px 0px;
 }
 
-.hide {display: none !important; }
-
-.img-popup {
-  width: auto;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin: auto;
-  z-index: 2000;
-  box-shadow: 0 0 10px $color-dark-grey;
+h3 {
+  font-size: $font-size-h3;
+  margin: 16px 0px 0px;
 }
 
-a img {
-  cursor: -webkit-zoom-in;
-  cursor: zoom-in;
+h4 {
+  font-size: $font-size-h4;
+  margin: 12px 0px 0px;
+}
+
+h5 {
+  font-size: $font-size-h5;
+  margin: 8px 0px 0px;
+}
+
+h6 {
+  font-size: $font-size-h6;
+  margin: 4px 0px 0px;
+}
+
+hr {
+  height: 1px;
+  border-style: solid;
+  color: $color-hr;
 }
