--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -1,358 +1,28 @@
-/*
-* Links
-* ========================================================================== */
-a {
-  color: $color-dark-grey-link;
-  &:hover,
-  &:focus,
-  &:active { text-decoration: none; }
+.content-wrapper {
+  align-items: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  justify-content: center;
+  -webkit-justify-content: center;
+  margin: 0 auto;
 }
 
-
-
-/*
-* Toggle Button
-* ========================================================================== */
-.nav-main a:not(.blog-logo) {
-  display: none;
+.profile-image {
+  margin: 40px 0px 0px;
+  height: $profile-image-height;
+  border-radius: 50%;
 }
 
-#menu-checkbox {
-  display: none;
+.page-content {
+  padding: 0px 0px 40px;
 }
 
-.toggle-button {
-  position: absolute;
-  display: block;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  left: 0;
-  top: 0;
-  color: $color-dark-grey;
-  font-size: 18px;
+.contact-list {
+  padding-left: 1.38889%;
+  padding-right: 1.38889%;
 }
 
-#menu-checkbox:checked + .nav-main a:not(.blog-logo) {
-  display: block;
-  width: 100%;
-  height: 40px;
-  line-height: 40px;
-  vertical-align: middle;
-}
-
-#menu-checkbox:checked + .nav-main {
-  -webkit-flex-flow: column nowrap;
-  -ms-flex-flow: column nowrap;
-  flex-flow: column nowrap;
-  height: 100%;
-}
-
-.toggle-button:after {
-  content: attr(data-open);
-  cursor: pointer;
-  padding: 15px;
-  font-size: 1.6rem;
-  text-align: center;
-}
-
-#menu-checkbox:checked + .nav-main .toggle-button:after {
-  content: attr(data-close);
-}
-
-
-
-@media screen and (min-width: $md-break-point){
-  .toggle-button {
-    display: none;
-  }
-}
-
-
-/*
-* Header
-* ========================================================================== */
-.main-header {
-  margin: 3em;
-  background-color: $color-white;
-  position: fixed;
-  z-index: 100;
-  width: 100%;
-  top: 0;
-  border-bottom: 1px solid $color-off-white;
-}
-
-
-
-/*
-* Header Navigation
-* ========================================================================== */
-.nav-main {
-  height: 50px;
-  text-transform: uppercase;
-  font-weight: bold;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-flow: row wrap;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
-  -webkit-justify-content: space-around;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  font-weight: 400;
-  font-family: "Roboto Condensed", sans-serif;
-  font-size: 24px;
-  padding: 0 1rem;
-  text-transform: uppercase;
-  a {
-    -webkit-order: 1;
-    -ms-flex-order: 1;
-    order: 1;
-    line-height: 50px;
-    margin: auto;
-    color: $color-dark-grey-link;
-    font-size: 24px;
-    text-decoration: none;
-    &:hover,
-    &:focus,
-    &:active {
-      color: $color-blue;
-    }
-  }
-}
-
-
-
-/*
-* Logotypes
-* ========================================================================== */
-.nav-main {
-  .blog-logo {
-    width: 100%;
-    line-height: 50px;
-    font-size: 24px;
-    text-decoration: none;
-    -webkit-order: 0;
-    -ms-flex-order: 0;
-    order: 0;
-    border-bottom: 0;
-    text-align: center;
-    font-weight: bold;
-  }
-}
-
-
-
-/*
-* Aside
-* ========================================================================== */
-.sidebar {
-  background-position: top center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  background-color: $color-dark-grey;
-  display: none;
-}
-
-.cover {
-  transition: all 0.8s ease 0s;
-  text-align: center;
-  position: relative;
-  background: linear-gradient(180deg, transparent, rgba(0, 0, 0, 0.75)) repeat scroll 0% 0% transparent;
-}
-
-.cover-text {
-  color: $color-white;
-  text-shadow: 2px 0 5px $color-dark-grey-link;
-  position: absolute;
-  bottom: 20%;
-  width: 80%;
-  left: 10%;
-  .heading a {
-    position: relative;
-    margin-right: 5px;
-    text-decoration: none;
-    &:hover { text-decoration: underline; }
-    &:not(:last-child):after {
-      content: " , ";
-      position: absolute;
-      bottom: 0;
-    }
-  }
-}
-
-.sidebar,
-.cover {
-  width: 100%;
-  height: 100vh;
-}
-
-
-
-/*
-* Article
-* ========================================================================== */
-main {
-  padding-top: 3em;
-}
-
-.index-page {
-  position: relative;
-  &:after {
-    content: "***";
-    position: absolute;
-    margin-top: 1em;
-    width: 100px;
-    left: 50%;
-  }
-}
-
-article {
-  padding: 2em 1em;
-  img,
-  embed,
-  object,
-  video,
-  iframe {
-    display: block;
-    margin: 0 auto;
-    max-width: 100%;
-    height: auto;
-  }
-
-  &:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-
-  h1 { margin-top: 0; }
-
-  img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin: 1em auto;
-    padding: .2em;
-    background-color: $color-white;
-  }
-}
-
-.post-meta {
-  padding-bottom: .5em;
-  text-transform: uppercase;
-  color: $color-light-grey;
-  font-size: 70%;
-  font-weight: bold;
-  font-family: 'Roboto Condensed', sans-serif;
-  a, a:hover, a:focus, a:visited {
-    color: $color-dark-grey-link;
-  }
-
-  .meta-black {
-    color: $color-dark-grey-link;
-  }
-
-}
-
-
-/*
-* Archive
-* ========================================================================== */
-.year {
-  padding: 0;
-  list-style: none;
-  text-transform: uppercase;
-  font-size: 13px
-}
-
-.year li {
-  padding: 5px;
-  padding: 8px 10px;
-  border-bottom: 1px dotted $color-light-grey;
-}
-
-.year a {
-  text-decoration: none
-}
-
-.year a:hover {
-  text-decoration: underline
-}
-
-.date {
-  text-align: right;
-  float: right;
-  color: $color-light-grey;
-  display: none;
-}
-
-
-
-/*
-* Footer
-* ========================================================================== */
-.main-footer {
-  height: 6em;
-  margin: 6em;
-  font-size: 70%;
-  border-top: 1px solid $color-off-white;
-  text-transform: uppercase;
-  text-align: center;
-  line-height: 1.5em;
-}
-
-.social {
-  font-family: 'FontAwesome';
-  font-size: 24px;
-  margin: .5em;
-  color: $color-dark-grey;
-  text-decoration: none;
-  cursor: pointer;
-  transition: color .3s ease-in;
-  -moz-transition: color .3s ease-in;
-  -o-transition: color .3s ease-in;
-  -webkit-transition: color .3s ease-in;
-
-  a {
-    text-decoration: none;
-    &:hover {
-      color: $color-blue;
-    }
-  }
-}
-
-
-
-/*
-* Next/Previous Posts
-* ========================================================================== */
-
-.link-to-post {
-  width: 100%;
-  display: block;
-  margin: 10px auto;
-  padding: 1em;
-  text-decoration: none;
-  outline: none;
-  text-align: center;
-  border: 1px solid $color-off-white;
-  transition: border-color .5s ease-in 0s;
-  &:hover { border-color: $color-blue; }
-
-  &__prev, &__next {
-    font-size: .8em;
-    color: $color-dark-grey-link;
-    margin: 10px 0;
-  }
-  
-  &__title {
-    font-size: 1em;
-    font-weight: bold;
-    color: $color-dark-grey-link;
-    margin-top: 10px;
-    display: block;
-  }
+li.contact-list-item {
+    float: left;
+    margin: 16px 60px;
 }
