--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,12 +2,13 @@
 ---
 
 @charset 'utf-8';
+
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700|Source+Sans+Pro:600');
+
 @import
-  "fonts",
   "variables",
-  "normalize",
+  "reset",
   "base",
   "layout",
-  "media-queries",
   "syntax-highlighting"
 ;
