Fine tuning to the css

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,4 @@
 <footer class="content-wrapper main-footer">
-  <hr>
   <ul class="main-footer-list">
     <li class="contact-list-item">
         {% for my_page in site.pages %} {% if my_page.is_footer_page && my_page.title %}
@@ -7,16 +6,23 @@
             <br>
         {% endif %} {% endfor %}
     </li>
+
+    <li class="contact-list-item">
+        {% for item in site.data.info.column1 %}
+            <a href={{ item.url | append: item.username | escape }} class="contact-list" alt={{ item.title | escape }} target="_blank">{{ item.title }}</a>
+            <br>
+        {% endfor %}
+    </li>
     
     <li class="contact-list-item">
-        {% for item in site.data.info.contacts %}
+        {% for item in site.data.info.column2 %}
             <a href={{ item.url | append: item.username | escape }} class="contact-list" alt={{ item.title | escape }} target="_blank">{{ item.title }}</a>
             <br>
         {% endfor %}
     </li>
 
     <li class="contact-list-item">
-        {% for item in site.data.info.socials %}
+        {% for item in site.data.info.column3 %}
             <a href={{ item.url | append: item.username | escape }} class="contact-list" alt={{ item.title | escape }} target="_blank">{{ item.title }}</a>
             <br>
         {% endfor %}
