--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -24,6 +24,8 @@
 
 li.contact-list-item {
     float: left;
-    margin: 16px 60px;
+    margin-right: 40px;
     list-style: none;
+    margin-top: 40px;
+    margin-bottom: 20px;
 }
