--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,17 @@ layout: default
 ---
 
 <div class="page-content">
+
+	{% if page.display_title %}
+		<h1 class="page-title"> {{ page.display_title }} </h1>
+	{% else %}
+		<h1 class="page-title"> {{ page.title }} </h1>
+	{% endif %}
+
 	{{ content }}
+
+	<br>
+	<br>
 
 	{% if page.action_button.link %}
 		{% if page.action_button.link contains "http" %}
