--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,6 +3,7 @@ $color-text: #454545;
 $color-primary: #007496;
 $color-primary-alpha: rgba(0, 116, 150, 0.5);
 $color-hr: #aeaeae;
+$button-color-alpha: rgba(255, 255, 255, 0.5);
 
 $text-font: 'Source Code Pro', monospace;
 $header-font: 'Source Sans Pro', sans-serif;
