--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="content-wrapper main-footer">
   <ul class="main-footer-list">
     <li class="contact-list-item">
-        {% for my_page in site.pages %} {% if my_page.is_footer_page && my_page.title %}
+        {% for my_page in site.pages %} {% if my_page.is_footer_page %}
             <a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
             <br>
         {% endif %} {% endfor %}
