--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -7,6 +7,14 @@
   margin: 0 auto;
 }
 
+.page-title {
+  text-align: center;
+  text-transform: uppercase;
+  color: $color-primary;
+  font-size: $font-size-title;
+  margin: 0px;
+}
+
 .profile-image {
   margin: 40px 0px 0px;
   height: $profile-image-height;
@@ -22,10 +30,23 @@
   padding-right: 1.38889%;
 }
 
+.button {
+  font-family: $header-font;
+  font-weight: $header-font-weight;
+  border: 2px solid $color-primary;
+  color: $color-primary;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
 li.contact-list-item {
-    float: left;
-    margin-right: 40px;
-    list-style: none;
-    margin-top: 40px;
-    margin-bottom: 20px;
+  float: left;
+  margin-right: 40px;
+  list-style: none;
+  margin-top: 80px;
+  margin-bottom: 20px;
 }
