--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,18 +12,9 @@
   <link rel="icon" type="image/png" href="{{ "assets/favicon.png" | relative_url }}"> 
   <link rel="stylesheet" href="{{ "/styles/main.css" | relative_url }}">
 
-  <meta property="og:url" content="{{ page.url | absolute_url }}">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="{{ page.title }}">
-  <meta property="og:description" content="{{ page.summary }}">
-  <meta property="og:site_name" content="{{ site.title }}">
-
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:url" content="{{ page.url | absolute_url }}">
-  <meta name="twitter:title" content="{{ page.title }}">
-  <meta name="twitter:description" content="{{ page.summary }}">
-
   {% if jekyll.environment == 'production' and site.google_analytics.tracking_id %}
     <script> {% include analytics.js %} </script>
   {% endif %}
+
+  {% seo %}
 </head>
