--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,6 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
   <title>{{ site.title | escape }} | {% if page.title %}{{ page.title | escape }}{% endif %}</title>
 
@@ -16,5 +15,5 @@
     <script> {% include analytics.js %} </script>
   {% endif %}
 
-  {% seo %}
+  {% seo title=false %}
 </head>
