--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
   <link rel="icon" type="image/png" href="{{ "assets/favicon.png" | relative_url }}"> 
-  <link rel="stylesheet" href="{{ "/styles/main.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 
   {% if jekyll.environment == 'production' and site.google_analytics.tracking_id %}
     <script> {% include analytics.js %} </script>
