--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,14 +1,5 @@
----
----
-
 @charset 'utf-8';
 
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700|Source+Sans+Pro:600');
 
-@import
-  "variables",
-  "reset",
-  "base",
-  "layout",
-  "syntax-highlighting"
-;
+@import "variables";
