--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+{% include header.html %}
+
 <div class="page-content">
 
 	{% if page.display_title %}
@@ -24,3 +26,5 @@ layout: default
 		<a href="{{ page.action_button.link | escape }}" class="button" target={{ button_target }}>{{ page.action_button.title }}</a>
 	{% endif %}
 </div>
+
+{% include footer.html %}
