--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -3,3 +3,5 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700|Source+Sans+Pro:600');
 
 @import "variables";
+@import 'bootstrap/bootstrap';
+@import 'font-awesome/font-awesome';
