--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 
   {% if jekyll.environment == 'production' and site.google_analytics.tracking_id %}
-    <script> {% include analytics.js %} </script>
+    {% include analytics.html %}
   {% endif %}
 
   {% seo title=false %}
