--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,32 +1,50 @@
-$color-background: #fff;
-$color-text: #454545;
-$color-primary: #007496;
-$color-primary-alpha: rgba(0, 116, 150, 0.5);
-$color-hr: #aeaeae;
-$button-color-alpha: rgba(255, 255, 255, 0.5);
+/*
+Bootstrap Overrides
+*/
 
-$text-font: 'Source Code Pro', monospace;
-$header-font: 'Source Sans Pro', sans-serif;
+/* Color Variables */
 
-$normal-font-weight: 400;
-$header-font-weight: 600;
-$bold-font-weight: 700;
+$body-color: #454545;
+$blue: #007496;
 
-$font-size-offset: 6;
+/* Font Variables */
 
-$font-size-header: 40px;
+$font-family-sans-serif: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, monospace;
+$font-family-monospace: 'Source Code Pro', Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+$font-family-base: $font-family-monospace;
 
-$font-size-h1: $font-size-header - ($font-size-offset * 0);
-$font-size-h2: $font-size-header - ($font-size-offset * 1);
-$font-size-h3: $font-size-header - ($font-size-offset * 2);
-$font-size-h4: $font-size-header - ($font-size-offset * 3);
-$font-size-h5: $font-size-header - ($font-size-offset * 4);
-$font-size-h6: $font-size-header - ($font-size-offset * 5);
+$font-weight-normal: 400;
+$font-weight-bold: 600;
+$font-weight-bolder: 700;
 
-$font-size-title: $font-size-header + ($font-size-offset * 1);
+$font-weight-base: $font-weight-normal;
 
-$font-size-body: 18px;
-$font-size-button: 12px;
-$font-size-social: 15px;
+$headings-font-weight: $font-weight-bold;
+$lead-font-weight: $font-weight-bold;
 
-$profile-image-height: 160px;
+$dt-font-weight: $font-weight-bold;
+$nested-kbd-font-weight: $font-weight-bold;
+$btn-font-weight: $font-weight-normal;
+$badge-font-weight: $font-weight-bold;
+$alert-link-font-weight: $font-weight-bold;
+$close-font-weight: $font-weight-bold;
+
+$display1-weight: $font-weight-bolder;
+$display2-weight: $font-weight-bolder;
+$display3-weight: $font-weight-bolder;
+$display4-weight: $font-weight-bolder;
+
+$display1-size: 5rem;
+
+/*
+Custom Variables
+*/
+
+/* Color Variables */
+
+$black-alpha: rgba(#000000, .5);
+$brand-gray: #8a8a8d;
+
+/* Font Variables */
+
+$fa-font-path: "../fonts";
