--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,7 +1,13 @@
 @charset 'utf-8';
 
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700|Source+Sans+Pro:600');
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,600,700|Source+Sans+Pro:600,700');
 
-@import "variables";
+@import 'variables';
 @import 'bootstrap/bootstrap';
 @import 'font-awesome/font-awesome';
+
+img.profile-image {
+  max-width: 160px;
+  border-radius: 50%;
+  margin-bottom: 32px;
+}
