--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -26,6 +26,7 @@ $font-weight-base: $font-weight-normal;
 $headings-font-weight: $font-weight-bold;
 $lead-font-weight: $font-weight-bold;
 
+/*
 $dt-font-weight: $font-weight-bold;
 $nested-kbd-font-weight: $font-weight-bold;
 $btn-font-weight: $font-weight-normal;
@@ -39,6 +40,7 @@ $display3-weight: $font-weight-bolder;
 $display4-weight: $font-weight-bolder;
 
 $display1-size: 5rem;
+*/
 
 /*
 Custom Variables
