--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -33,7 +33,7 @@ layout: page
 
 {% for work in site.work %}
 <h2>{{ work.display_title | default: work.title }}</h2>
-<a href="{{ work.link | relative_url }}">{{ work.link | remove: "http://" | remove: "https://" | remove: "www." }}</a>
+<a href="{{ work.url | relative_url }}">{{ work.url | remove: "http://" | remove: "https://" | remove: "www." }}</a>
 <br/>
 
 {% for job in work.jobs %}
